[package]
name = "fcwt-demo"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.72"

[dependencies]
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
fcwt = { git = "https://github.com/boondockenergy/fcwt-rs.git", version = "0.1.2" }
egui_plot = "0.26.2"
cpal = { git = "https://github.com/RustAudio/cpal.git", version = "0.15.2", features = ["wasm-bindgen"]}
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = ["AudioContext", "AudioWorkletNode", "AudioWorkletNodeOptions", "AudioWorklet", "BlobPropertyBag", "Url", "Navigator", "Permissions", "MediaDevices", "MediaStreamConstraints", "MediaStream", "MediaStreamAudioSourceNode"] }
js-sys = "0.3.68"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[unstable]
build-std = ["std"]